TIP529 image metadata: preciser language for object pointer

--- a/tip/529.md
+++ b/tip/529.md
@@ -322,18 +322,18 @@ The function parameters in Tk_PhotoImageFormat87 are changed as follows:
       int (Tk_ImageStringWriteProc87) (Tcl_Interp *interp, Tcl_Obj *format,
           Tk_PhotoImageBlock *blockPtr, Tcl_Obj *metadata);
 
-If the metadata object is writable and eventually readable by the called, a pointer to the object object (Tcl_Obj **metadataPtr) is passed.
-If the metadata is only readable, the object pointer (Tcl_Obj *metadata) is passed.
+If the metadata object is writable and eventually readable by the called image format driver function, a pointer to the object pointer (Tcl_Obj **metadataPtr) is passed.
+If the metadata is only readable by the image driver function, the object pointer (Tcl_Obj *metadata) is passed.
 
-If a pointer to the object pointer is passed, the following rules apply to the driver:
+If a pointer to the object pointer is passed, the following rules apply to the image format driver function:
 
    *   The pointer may point to a NULL value which says, that there is currently no metadata.
    *   A NULL value may be written to say, that there is no metadata to output.
-   *   If the pointer points to a object it must be taken care, that this object may be shared. If the metadata object should be changed, a copy must be done for a shared object.
+   *   If the pointer points to an object it must be taken care, that this object may be shared. If the metadata object should be changed, a copy must be done for a shared object.
 
 If the object pointer is passed, the following rules apply:
 
-   *   A NULL value indicates "no metadata".
+   *   A NULL value indicates "no metadata present".
 
 ## Usage of metadata dict by the functions
 
