TIP529 image metadata: new image format driver described: separate metadata in/out, driver communication memory, flag file read end

--- a/tip/529.md
+++ b/tip/529.md
@@ -26,8 +26,18 @@ This metadata should be accessible and setable for the following aims:
    *   Make it available after image load on script level
    *   Make it setable within the image
    *   Write its data to the image file.
-   *   Optimize operations by storing intermediate image representations. Due to that, the metadata dict may be the 3rd source (feside -file and -data options) for image data.
+   *   Optimize operations by storing intermediate image representations. Due to that, the metadata dict may be the 3rd source (beside -file and -data options) for image data.
    *   Pass additional data to the image format driver where the "-format" option extension is not suitable.
+
+Additional possibilies in the image driver interface are proposed:
+
+   *   A DString memory may be used by the match procedure to pass data to the read procedure
+   *   The file match procedure may flag that the file read procedure will not need the file any more.
+
+The rationale for both are the current implementation of the SVG driver:
+
+   *   The driver currently uses ThreadSpecific data to pass data from the match procedure to the read procedure. Due to that, a more simple alternate possibility is proposed
+   *   The driver does not need the file any more after the match procedure. Thus, any preparing file operations (seek etc) may be omitted and a NULL channel may be passed.
 
 ## image resolution
 
@@ -293,75 +303,74 @@ Example to write a metadata comment:
     % myimage write GifwithComment.gif -format "GIF"-metadata [dict create Comment "Comment from write command"]
     ... GIF data with comment included
 
-# C interface
+# Image format driver interface
 
-Extend the image by the property metadata.
+The image format driver interface is changed in the following aspects:
+
+## Pass metadata dict as parameter
+
+Each driver function gets a tcl object pointer "metadataIn" as parameter.
+This parameter serves to input a metadata dict to the driver function.
+It may be NULL to flag that the metadata dict is empty.
+
+## Receive a metadata dict from the driver
+
+The image read functions (FileRead, DataRead) may return a metadata dict.
+Those function get an additional tcl object pointer as "metadataOut" as parameter.
+
+This parameter may be NULL to indicate, that no metadata return is attended (put subcommand).
+
+This parameter is initialized to an empty unshared dict object if metadata return is attended (image create command, fconfigure subcommand).
+The driver may set dict keys in this object to return metadata.
+
+## match and read function communication memory
+
+The match functions and the image read functions get an additional parameter "driverInternalPtr" which points to an initialized DString.
+The DString is cleared by the framework.
+
+Using this DString, the driver match function may pass data to its read function.
+
+## flag that the match function does not need the channel any more
+
+The driver file match function may flag, that it does not need the channel any more.
+Only in this case, the additional output int "closeChannel" should be set to 1.
+In this case, a NULL driver is passed to the read driver function.
 
 ## Image format driver interface
 
-For image format drivers, a new registration procedure is proposed which includes functions with the metadata as a parameter:
+For image format drivers, a new registration procedure is proposed which includes functions with the new parameters.
+In addition, the parameters are reordered to always have the order interp, input parameter, output parameter, accillary functions.
+
+The new stubs enabled function is:
 
     void Tk_CreatePhotoImageFormat87(const Tk_PhotoImageFormat87 *formatPtr)
 
 The function parameters in Tk_PhotoImageFormat87 are changed as follows:
 
-      int (Tk_ImageFileMatchProc87) (Tcl_Channel chan, const char *fileName,
-          Tcl_Obj *format, int *widthPtr, int *heightPtr, Tcl_Interp *interp,
-          Tcl_Obj **metadataPtr);
-      int (Tk_ImageStringMatchProc87) (Tcl_Obj *dataObj, Tcl_Obj *format,
-          int *widthPtr, int *heightPtr, Tcl_Interp *interp, Tcl_Obj **metadataPtr);
-      int (Tk_ImageFileReadProc87) (Tcl_Interp *interp, Tcl_Channel chan,
-          const char *fileName, Tcl_Obj *format, Tk_PhotoHandle imageHandle,
-          int destX, int destY, int width, int height, int srcX, int srcY,
-          Tcl_Obj **metadataPtr);
-      int (Tk_ImageStringReadProc87) (Tcl_Interp *interp, Tcl_Obj *dataObj,
-          Tcl_Obj *format, Tk_PhotoHandle imageHandle, int destX, int destY,
-          int width, int height, int srcX, int srcY, Tcl_Obj **metadataPtr);
-      int (Tk_ImageFileWriteProc87) (Tcl_Interp *interp, const char *fileName,
-          Tcl_Obj *format, Tk_PhotoImageBlock *blockPtr, Tcl_Obj *metadata);
-      int (Tk_ImageStringWriteProc87) (Tcl_Interp *interp, Tcl_Obj *format,
-          Tk_PhotoImageBlock *blockPtr, Tcl_Obj *metadata);
+	int (Tk_ImageFileMatchProc87) (Tcl_Interp *interp, Tcl_Channel chan,
+		const char *fileName, Tcl_Obj *format, Tcl_Obj *metadataIn, int *widthPtr,
+		int *heightPtr, int *closeChannelPtr, Tcl_DString *driverInternalPtr);
 
-If the metadata object is writable and eventually readable by the called image format driver function, a pointer to the object pointer (Tcl_Obj **metadataPtr) is passed.
-If the metadata is only readable by the image driver function, the object pointer (Tcl_Obj *metadata) is passed.
+	int (Tk_ImageStringMatchProc87) (Tcl_Interp *interp, Tcl_Obj *dataObj,
+		Tcl_Obj *format, Tcl_Obj *metadataIn, int *widthPtr, int *heightPtr,
+		Tcl_DString *driverInternalPtr);
 
-If a pointer to the object pointer is passed, the following rules apply to the image format driver function:
+	int (Tk_ImageFileReadProc87) (Tcl_Interp *interp, Tcl_Channel chan,
+		const char *fileName, Tcl_Obj *format, Tcl_Obj *metadataIn,
+		Tk_PhotoHandle imageHandle,
+		int destX, int destY, int width, int height, int srcX, int srcY,
+		Tcl_Obj *metadataOut, Tcl_DString *driverInternalPtr);
 
-   *   The pointer may point to a NULL value which says, that there is currently no metadata.
-   *   A NULL value may be written to say, that there is no metadata to output.
-   *   If the pointer points to an object it must be taken care, that this object may be shared. If the metadata object should be changed, a copy must be done for a shared object.
+	int (Tk_ImageStringReadProc87) (Tcl_Interp *interp, Tcl_Obj *dataObj,
+		Tcl_Obj *format, Tcl_Obj *metadataIn, Tk_PhotoHandle imageHandle,
+		int destX, int destY, int width, int height, int srcX, int srcY,
+		Tcl_Obj *metadataOut, Tcl_DString *driverInternalPtr);
 
-If the object pointer is passed, the following rules apply:
+	int (Tk_ImageFileWriteProc87) (Tcl_Interp *interp, const char *fileName,
+		Tcl_Obj *format, Tcl_Obj *metadataIn, Tk_PhotoImageBlock *blockPtr);
 
-   *   A NULL value indicates "no metadata present".
-
-## Usage of metadata dict by the functions
-
-### Tk\_ImageFileMatchProc87, Tk\_ImageStringMatchProc87
-
-The passed metadata may be used as image data or parameters.
-
-The metadata creation may happen here and in the following read command.
-In addition, it may be used to pass information to the read command.
-
-The metadata may be set by intermediate or final result data.
-This data may be used by a following Read command and is passed through.
-
-### Tk\_ImageFileReadProc87, Tk\_ImageStringReadProc87
-
-The metadata returned by the match function is passed as input.
-
-The written metadata is the resulting metadata.
-
-It is only shown to the script level on an image creation and configure command.
-The put and read command does ignore the read metadata.
-
-### Tk\_ImageFileWriteProc87, Tk\_ImageStringWriteProc87
-
-The metadata is only passed for reading.
-The contained keys may be used to include the data in the result data.
-
-For example, a GIF comment may be written.
+	int (Tk_ImageStringWriteProc87) (Tcl_Interp *interp, Tcl_Obj *format,
+		Tcl_Obj *metadataIn, Tk_PhotoImageBlock *blockPtr);
 
 # Implementation
 
