--- a/tip/529.md
+++ b/tip/529.md
@@ -313,6 +313,13 @@ Each driver function gets a tcl object pointer "metadataIn" as parameter.
 This parameter serves to input a metadata dict to the driver function.
 It may be NULL to flag that the metadata dict is empty.
 
+A typical driver code snipped to check for a metadata key is:
+
+    if (NULL != metadataIn) {
+        Tcl_Obj *itemData;
+        Tcl_DictObjGet(interp, metadataIn, Tcl_NewStringObj("Comment",-1), &itemData));
+
+
 ## Receive a metadata dict from the driver
 
 The image read functions (FileRead, DataRead) may return a metadata dict.
@@ -322,6 +329,12 @@ This parameter may be NULL to indicate, that no metadata return is attended (put
 
 This parameter is initialized to an empty unshared dict object if metadata return is attended (image create command, fconfigure subcommand).
 The driver may set dict keys in this object to return metadata.
+
+A sample driver code snippet is:
+
+    if (NULL != metadataOut) {
+        result = Tcl_DictObjPut(NULL, metadataOut, Tcl_NewStringObj("XMP",-1), Tcl_NewStringObj(xmpMetadata);
+
 
 ## match and read function communication memory
 
@@ -343,33 +356,33 @@ In addition, the parameters are reordered to always have the order interp, input
 
 The new stubs enabled function is:
 
-    void Tk_CreatePhotoImageFormat87(const Tk_PhotoImageFormat87 *formatPtr)
+    void Tk_CreatePhotoImageFormatVersion3(const Tk_PhotoImageFormatVersion3 *formatPtr)
 
-The function parameters in Tk_PhotoImageFormat87 are changed as follows:
+The function parameters in Tk_PhotoImageFormatVersion3 are as follows:
 
-	int (Tk_ImageFileMatchProc87) (Tcl_Interp *interp, Tcl_Channel chan,
+	int (Tk_ImageFileMatchProcVersion3) (Tcl_Interp *interp, Tcl_Channel chan,
 		const char *fileName, Tcl_Obj *format, Tcl_Obj *metadataIn, int *widthPtr,
 		int *heightPtr, int *closeChannelPtr, Tcl_DString *driverInternalPtr);
 
-	int (Tk_ImageStringMatchProc87) (Tcl_Interp *interp, Tcl_Obj *dataObj,
+	int (Tk_ImageStringMatchProcVersion3) (Tcl_Interp *interp, Tcl_Obj *dataObj,
 		Tcl_Obj *format, Tcl_Obj *metadataIn, int *widthPtr, int *heightPtr,
 		Tcl_DString *driverInternalPtr);
 
-	int (Tk_ImageFileReadProc87) (Tcl_Interp *interp, Tcl_Channel chan,
+	int (Tk_ImageFileReadProcVersion3) (Tcl_Interp *interp, Tcl_Channel chan,
 		const char *fileName, Tcl_Obj *format, Tcl_Obj *metadataIn,
 		Tk_PhotoHandle imageHandle,
 		int destX, int destY, int width, int height, int srcX, int srcY,
 		Tcl_Obj *metadataOut, Tcl_DString *driverInternalPtr);
 
-	int (Tk_ImageStringReadProc87) (Tcl_Interp *interp, Tcl_Obj *dataObj,
+	int (Tk_ImageStringReadProcVersion3) (Tcl_Interp *interp, Tcl_Obj *dataObj,
 		Tcl_Obj *format, Tcl_Obj *metadataIn, Tk_PhotoHandle imageHandle,
 		int destX, int destY, int width, int height, int srcX, int srcY,
 		Tcl_Obj *metadataOut, Tcl_DString *driverInternalPtr);
 
-	int (Tk_ImageFileWriteProc87) (Tcl_Interp *interp, const char *fileName,
+	int (Tk_ImageFileWriteProcVersion3) (Tcl_Interp *interp, const char *fileName,
 		Tcl_Obj *format, Tcl_Obj *metadataIn, Tk_PhotoImageBlock *blockPtr);
 
-	int (Tk_ImageStringWriteProc87) (Tcl_Interp *interp, Tcl_Obj *format,
+	int (Tk_ImageStringWriteProcVersion3) (Tcl_Interp *interp, Tcl_sObj *format,
 		Tcl_Obj *metadataIn, Tk_PhotoImageBlock *blockPtr);
 
 # Implementation
