TIP529 image metadata: added Pauls suggestions: match functions may set metadata, discussion

--- a/tip/529.md
+++ b/tip/529.md
@@ -29,16 +29,6 @@ This metadata should be accessible and setable for the following aims:
    *   Optimize operations by storing intermediate image representations. Due to that, the metadata dict may be the 3rd source (beside -file and -data options) for image data.
    *   Pass additional data to the image format driver where the "-format" option extension is not suitable.
 
-Additional possibilies in the image driver interface are proposed:
-
-   *   A DString memory may be used by the match procedure to pass data to the read procedure
-   *   The file match procedure may flag that the file read procedure will not need the file any more.
-
-The rationale for both are the current implementation of the SVG driver:
-
-   *   The driver currently uses ThreadSpecific data to pass data from the match procedure to the read procedure. Due to that, a more simple alternate possibility is proposed
-   *   The driver does not need the file any more after the match procedure. Thus, any preparing file operations (seek etc) may be omitted and a NULL channel may be passed.
-
 ## image resolution
 
 This TIP specially targets the resolution (DPI) value of the image.
@@ -107,6 +97,24 @@ A comment may be used to save custom data in the image file.
 An example is a vision automation project where a test procedure is connected to each image.
 My solution is to use GIF images and to store the test procedure (a TCL script) in the gif comment.
 
+
+## Extended image format driver interface
+
+Additional possibilities in the image driver interface are proposed:
+
+   *   A DString memory may be used by the match procedure to pass data to the read procedure
+   *   The file match procedure may flag that the file read procedure will not need the file any more.
+
+The rationale for both are the current implementation of the SVG driver:
+
+   *   The driver currently uses ThreadSpecific data to pass data from the match procedure to the read procedure. Due to that, a more simple alternate possibility is proposed
+   *   The driver does not need the file any more after the match procedure. Thus, any preparing file operations (seek etc) may be omitted and a NULL channel may be passed.
+
+## Preview extension for new command "image find"
+
+The match functions should also be able to output the metadata dict.
+This is due to the plan by Paul Obermeier to make the match function alone available on the script level.
+See the discussion section for the message.
 # Specification
 
 ## Metadata Dict
@@ -322,18 +330,18 @@ A typical driver code snipped to check for a metadata key is:
 
 ## Receive a metadata dict from the driver
 
-The image read functions (FileRead, DataRead) may return a metadata dict.
+The image match and read functions (FileMatch, StringMatch, FileRead, StringRead) may set keys in a prepared metadata dict to return them.
 Those function get an additional tcl object pointer as "metadataOut" as parameter.
 
-This parameter may be NULL to indicate, that no metadata return is attended (put subcommand).
+This parameter may be NULL to indicate, that no metadata return is attended (put, read subcommands).
 
-This parameter is initialized to an empty unshared dict object if metadata return is attended (image create command, fconfigure subcommand).
+This parameter is initialized to an empty unshared dict object if metadata return is attended (image create command, configure subcommand).
 The driver may set dict keys in this object to return metadata.
 
 A sample driver code snippet is:
 
     if (NULL != metadataOut) {
-        result = Tcl_DictObjPut(NULL, metadataOut, Tcl_NewStringObj("XMP",-1), Tcl_NewStringObj(xmpMetadata);
+        Tcl_DictObjPut(NULL, metadataOut, Tcl_NewStringObj("XMP",-1), Tcl_NewStringObj(xmpMetadata);
 
 
 ## match and read function communication memory
@@ -362,11 +370,12 @@ The function parameters in Tk_PhotoImageFormatVersion3 are as follows:
 
 	int (Tk_ImageFileMatchProcVersion3) (Tcl_Interp *interp, Tcl_Channel chan,
 		const char *fileName, Tcl_Obj *format, Tcl_Obj *metadataIn, int *widthPtr,
-		int *heightPtr, int *closeChannelPtr, Tcl_DString *driverInternalPtr);
+		int *heightPtr, Tcl_Obj *metadataOut, int *closeChannelPtr,
+		Tcl_DString *driverInternalPtr);
 
 	int (Tk_ImageStringMatchProcVersion3) (Tcl_Interp *interp, Tcl_Obj *dataObj,
 		Tcl_Obj *format, Tcl_Obj *metadataIn, int *widthPtr, int *heightPtr,
-		Tcl_DString *driverInternalPtr);
+		Tcl_Obj *metadataOut, Tcl_DString *driverInternalPtr);
 
 	int (Tk_ImageFileReadProcVersion3) (Tcl_Interp *interp, Tcl_Channel chan,
 		const char *fileName, Tcl_Obj *format, Tcl_Obj *metadataIn,
@@ -392,6 +401,29 @@ Implementation started with the tag tip-529-image-metadata.
 # Rejected Alternatives
 
 # Discussion
+
+## image find command planned by Paul Obermeier
+
+What about extending and exposing the functionality of the MatchProc function at the Tcl level?
+That way it would be possible to implement a command like "image info <fileName>", where
+you can retrieve the image size, resolution and additional metadata without explicitely loading
+the image.
+In my image browser (http://www.posoft.de/html/poImgBrowseShots.html#Img1)
+I am currently using a modified version of the Tcllib fileutil::fileType procedure to extract the
+image size without creating a photo image. Getting that information (and additional metadata)
+directly from the C-based image parsers would be faster and there would be no need to code that
+functionality twice.
+
+HaO: This functionality is prepared by the possibility that the match driver functions also may output metadata.
+
+## Update DPI metadata property on image script
+
+Paul Obermeier has made the following proposal:
+
+How do you want to handle the physical resolution (DPI) in the case of image scaling?
+Just keep the original DPI value or adjust the DPI values automatically, maybe using an option.
+
+HaO: Currently, this is not prevued and may be implemented by another TIP.
 
 # Copyright
 
