TIP529 image metadata: document new metadata key concept and TkImg implementation

--- a/tip/529.md
+++ b/tip/529.md
@@ -127,14 +127,24 @@ corresponding data is present:
 
 | Key       | Description      | Example image formats |
 |:---------:|:----------------:|:---------------------:|
-| `DPI`     | Image resolution | png                   |
-| `Comment` | Text comment     | gif                   |
+| `DPI`     | Horizontal Image resolution in DPI (double) | png                   |
+| `aspect`  | Aspect ratio horizontal/vertical (double)   | gif                   |
+| `comment` | Text comment     | gif                   |
 | `XMP`     | xmp image data   | gif,png               |
+
+Comments on the key choice:
+
+   *   Abreviation are in capital letters
+   *   Words are in Americal English in English (small) case
+   *   Vertical DPI is expressed as DPI/aspect. The reason is, that some image formats only feature aspect and no dpi.
 
 If a particular image does not specify any keys (whether during creation or
 otherwise) then the dictionary will be empty.
 
 Each photo image format driver may define additional keys and may decide to use them for input (as a parameter for image read and/or image write), output (as an image read result) or both.
+
+The TIP implementation does not target to implement all possible keys of all image formats for reading and writing imediately.
+Image key format may grow over time on a use-case basis.
 
 ## Commands
 
@@ -397,6 +407,11 @@ The function parameters in Tk_PhotoImageFormatVersion3 are as follows:
 # Implementation
 
 Implementation started with the tag tip-529-image-metadata.
+
+Thanks to Paul Obermaier, the TkImg package has implemented the new interface and uses it currently for DPI setting and reporting.
+
+A set of test cases is included in the implementation.
+In addition, the TkImg package features additional tests for this patch which exercise additional features like stub table, image parameters.
 
 # Rejected Alternatives
 
