--- a/tip/577.md
+++ b/tip/577.md
@@ -52,9 +52,9 @@ list index out of range
 
   * The C function `Tcl_GetIntForIndex()` will get an additional `flags` parameter, which holds any combination of
     3 possible flags (could be extended further in the future):
-      - `TCL_INDEX_ERROR`: Handle "-2" (and lower) and "end+2" (and higher) as invalid index.
-      - `TCL_INDEX_NOMIN`: Handle "-1" as invalid index (when `TCL_INDEX_ERROR` is set), or as the same as index "0".
-      - `TCL_INDEX_NOMAX`: Handle "end+1" as invalid index (when `TCL_INDEX_ERROR` is set), or as the same as index "end".
+      - `TCL_INDEX_ERROR`: Handle `-2` (and lower) and `end+2` (and higher) as invalid index.
+      - `TCL_INDEX_NOMIN`: Handle `-1` as invalid index (when `TCL_INDEX_ERROR` is set), or as the same as index "0".
+      - `TCL_INDEX_NOMAX`: Handle `end+1` as invalid index (when `TCL_INDEX_ERROR` is set), or as the same as index "end".
     The default flag value 0, will behave as-is now, accepting all forms as valid. Starting with Tcl 9.0,
     all internal `Tcl_GetIntForIndex()` calls will at least supply the `TCL_INDEX_ERROR` flag value
     to this function.
@@ -62,22 +62,22 @@ list index out of range
     Commands that accept either a single index or a list of indices will handle the empty string as empty list,
     not as a single index.
   * New functions "string is none" and "string is index". 
-  * Starting with Tcl 9.0, integers < -1 and forms "end+x" where x > 1 will no longer be valid indexes any more.
-    Various commands use "-1" to indicate "just before the first" and "end+1" for "just after the last",
+  * Starting with Tcl 9.0, integers < `-1` and forms `end+x` where x > 1 will no longer be valid indexes any more.
+    Various commands use `-1` to indicate "just before the first" and `end+1` for "just after the last",
     those usages will continue to be work as it worked before.
-  * For Tk, start accepting all those same values as indices for listboxes, menus .....
+  * For Tk, start accepting all those same values as indices for entries, listboxes, menus .....
+    and also for button and menu-related `-underline` options. A new TK_OPTION_INDEX option is implemented,
+    which is almost the same as TK_OPTION_INT, but in stead of only integers, accepts all index forms as well. 
     See:  [`widgets indices enhancement`](https://core.tcl-lang.org/tk/tktview?name=1ef1ae2177)
 
 # Compatibility
 
-Since, starting with Tcl 9.0, some index forms are no longer valid, this is a potential
-incompatibility. Indices like "-2" and "end+2" can no longer be used in scripts: they
-will immediately result in an "index out of range" error, in stead of being silently ignore.
+For Tcl 8.7 this is almost 100% compatible, previous error-situations become valid now:
+Index value `none` can now be used in place of `-1`, just as the empty string "".
 
-For Tcl 8.7 this is almost 100% compatible: Index value "none" resulted in an error,
-now it can be used in place of "-1". The empty string "" can also be used now:
-previously it was either a valid empty list (still handled the same) or it was
-an error situation (now valid).
+Since, starting with Tcl 9.0, some index forms are no longer valid, this is a potential
+incompatibility. Indices like `-2` and `end+2` can no longer be used in scripts: they
+will immediately result in an "index out of range" error, in stead of being silently ignore.
 
 # Implementation
 
