TIP 578 in Voting state

--- a/tip/578.md
+++ b/tip/578.md
@@ -2,6 +2,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
+	Vote:           In progress
 	Created:        10-June-2020
 	Post-History:   
 	Keywords:       Tcl index
